--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<img src"https://s3.ap-south-1.amazonaws.com/projectbucket5302.com/download.png">
+<img src "d19ig1ueoh97eb.cloudfront.net">
 this is the  project given to us by vimal sir has been completed by me 
