--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
+  <body>
 <img src "d19ig1ueoh97eb.cloudfront.net">
 this is the  project given to us by vimal sir has been completed by me 
+  </body>
+</html>
